variables.RunFour.scala.error
Erreur de compilation :
RunFour:3: error: not found: value nbBiscuits
while (nbBiscuits!=4) {
       ^