variables.RunFour.scala.code
var nbBiscuit: Int = 0

while (nbBiscuits!=4) {
  if (estSurBiscuit()) {
    nbBiscuit += 1
  }
  avance()
}